# wattelse

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AUTHORS.txt  Dockerfile  INSTALL.md  README.md  copyright.txt  datamapplot.html  demo_bertopic.md  entrypoint.sh  final_df_test.json  install.sh  install_feeds_and_newsletters.py  pyproject.toml  setup.cfg  start_all_services.sh  stop_all_services.sh  supervisord.conf
.github/workflows/: black.yml
QA_chatbot/: README.md  requirements.txt
QA_chatbot/data/: BP-2019.csv
QA_chatbot/src/: app.py  chatbot.py  extract_text_from_MD.py  extract_text_from_PDF.py  extract_text_using_origami.py  utils.py
bertopic/: requirements.txt
bertopic/data/: decarbonation.jsonl
bertopic/notebooks/: pdf2jsonl_using_Origami_indexer.ipynb  plot_news_repartition_over_time.ipynb
bertopic/src/: app.py  app_utils.py  data_preprocessing.py  extract_text_from_PDF.py  metrics.py  semantic_scholar_api.py  train.py  utils.py
bertrend/: __init__.py  __main__.py  metrics.py  train.py  utils.py
bertrend/app/: Main_page.py  app_utils.py  data_utils.py  state_utils.py
bertrend/common/: cache_utils.py  openai_client.py  prompts.py
bertrend/metrics/: temporal_metrics.py  temporal_metrics_embedding.py  topic_metrics.py
bertrend/summary/: __init__.py  abstractive_summarizer.py  app.py  chatgpt_summarizer.py  extractive_summarizer.py  lexrank.py  start_summarizer_app.sh
bertrend/weak_signals/: app.py  data_loading.py  global_vars.py  prompts.py  signal_llm_template_en.html  topic_modeling.py  visualizations.py  weak_signals.py
bertrend_apps/: install_feeds_and_newsletters.py  start_apps.sh  stop_apps.sh
bertrend_apps/common/: crontab_utils.py  mail_utils.py
bertrend_apps/data_provider/: __main__.py  arxiv_provider.py  bing_news_provider.py  curebot_provider.py  data_provider.py  google_news_provider.py  newscatcher_provider.py  utils.py
bertrend_apps/newsletter/: __main__.py  newsletter.css
bertrend_apps/newsletters/: README.md  __main__.py  newsletter_features.py
chatbot/data/: DODER.md.csv
chatbot/src/: chatbot.py  extract_text_from_MD.py  extract_text_from_PDF.py  utils.py
data/bertopic/: NEWSLETTER.md  veille_malveillance_01062024_05072024.parquet
data/chatbot/: DODER.md.csv
data/data_provider_queries/: arxiv_nlp.txt  decarbonation.txt  mobilite_electrique_2019-2023.txt  reindustrialisation.txt  sobriete.txt
data_provider/: README.md  __main__.py  bing_news_provider.py  curebot_queries.txt  data_provider.py  google_news_provider.py  newscatcher_provider.py  requirements.txt  test_queries.txt  utils.py
data_provider/query_examples/: curebot_queries.txt  decarbonation.txt  reindustrialisation.txt  rte.txt  sobriete.txt
django_config/: django_superuser.cfg
experiments/gpt-rte/: README.txt  requirements.txt
exploration/: context_compression.ipynb  explo_generation.ipynb
exploration/curebot/: import_extraction_article.ipynb  start_newletter_generator.sh  start_newsletter_generator.sh  veille_analyse.py
exploration/document_summarizer/: app.py
exploration/geolocalization/: entity_utils.py
exploration/gpt_rte/: data_preprocessing.py  generation.py  train.py
exploration/load_tests/: embedding_load.py  rag_load.py
exploration/raccordement/: Accueil.py  RAG_queries.yaml  Trame-DTR_streamlit.docx  app.py  information.yaml  start.sh  topics_raccordement.py
exploration/text_parsers/: extract_text_from_HTML.py  extract_text_from_MD.py  extract_text_from_PDF.py  extract_text_using_origami.py
llm_api/: README.md  start_llm_service.sh  stop_llm_service.sh
saved_models/: rte_2021_20240308_152355_params.json
saved_models/rte_2021_20240308_111032/: config.json  ctfidf.safetensors  ctfidf_config.json  topic_embeddings.safetensors  topics.json
saved_models/rte_2021_20240308_152355/: ctfidf.safetensors  ctfidf_config.json  topic_embeddings.safetensors  topics.json
saved_models/rte_2022_20240308_152506/: ctfidf.safetensors  ctfidf_config.json  topic_embeddings.safetensors  topics.json
saved_models/rte_2023_20240308_111239/: ctfidf.safetensors  ctfidf_config.json  topic_embeddings.safetensors  topics.json
scripts/: install_pygooglenews.sh
scripts/fastchat/: start_llm_service.sh
scripts/llm_api/: README.md  start_llm_service.sh
scripts/ollama/: check_llm_service.sh  start_llm_service.sh  stop_llm_service.sh
summary/: requirements.txt
summary/src/: extractive_summarizer.py  summarizer.py  text_summarization.py
wattelse/: __init__.py  example_script_to_test_update.py  match_debugging.txt
wattelse.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
wattelse/api/: README.md  create_certificate.sh  prompts.py  security.py  security_client_utils.py  wattelse_api.ipynb
wattelse/bertopic/: NEWSLETTER.md  README.md  __main__.py  metrics.py  newsletter.css  newsletter_features.py  ouput_features.py  temporal_metrics.py  temporal_metrics_embedding.py  topic_metrics.py  train.py  utils.py
wattelse/chatbot/: README.md  USER_MODE.md  __init__.py  api.cfg  app.py  basic_llm_app.py  chat_history.py  chatbot.py  config.cfg  indexer.py  initialize_user_RAG.py  utils.py
wattelse/common/: __init__.py  cache_utils.py  config_utils.py  crontab_utils.py  mail_utils.py  utils.py  vars.py
wattelse/config/: config_utils.py  fastchat_api.cfg  ollama_api.cfg  openai.cfg
wattelse/dashboard/: dashboard.py  dashboard_utils.py  indicators.py
wattelse/data_provider/: README.md  __main__.py  arxiv_provider.py  bing_news_provider.py  curebot_provider.py  data_provider.py  google_news_provider.py  newscatcher_provider.py  utils.py
wattelse/dataviz/: Main_page.py
wattelse/django/: README.md  manage.py  start.py  stop.py
wattelse/evaluation_pipeline/: README.md  __init__.py  eval_config.cfg  eval_config.py  evaluation.py  pairwise_comparison.py  prompt_eval.py  rag_eval_dashboard.py  regex_patterns.py  run_jury.py  run_sequential.py  server_config.cfg  server_config.py
wattelse/extraction-cart/: extraction-cart.py
wattelse/geolocalization/: entity_utils.py
wattelse/gpt_rte/: app.py  generation.py  (+3 more)
(+477 files in other folders)
