[tool.poetry]
name = "wattelse"
version = "1.2.3"
description = "Flexible RAG"
authors = ["Jérôme Picault <jerome.picault@rte-france.com>", "Guillaume Grosjean <guillaume.grosjean@rte-france.com>"]
license = "MPL 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
accelerate = "^1.0.0"
bert-score = "^0.3.13"
black = "^24.8.0"
bs4 = "^0.0.2"
chromadb = "0.5.11"
django = "^5.1.1"
docxtpl = "^0.18.0"
evaluate = "^0.4.3"
fastapi = "^0.115.0"
fschat = "^0.2.36"
langchain = "^0.3.15"
langchain-community = "^0.3.15"
langchain-chroma = "^0.1.4"
langchain-openai = "^0.3.1"
llama-index-core = "^0.11.16"
locust = "^2.31.8"
loguru = "^0.7.2"
mammoth = "^1.8.0"
numpy = "<2"
openai = "^1.60.0"
openpyxl = "^3.1.5"
pandas = "^2.2.3"
plotly = "^5.24.1"
pymupdf = "^1.24.11"
pysqlite3-binary = "^0.5.3.post1"
python-docx = "^1.1.2"
python-multipart = "^0.0.12"
python-pptx = "^1.0.2"
pyyaml = "^6.0.2"
rank-bm25 = "^0.2.2"
scikit-learn = "^1.5.2"
scipy = "^1.14.1"
seaborn = "^0.13.2"
sentence-transformers = "^3.1.1"
streamlit = "^1.39.0"
tiktoken = "^0.7.0"
typer = "^0.12.5"
torch = "2.4.0"
spacy = "<3.8"
sparqlwrapper = "^2.0.0"
unstructured = "^0.15.13"
uvicorn = "^0.31.0"
vllm = "^0.6.1"
xlsx2html = "^0.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
