[tool.poetry]
name = "wattelse"
version = "1.2.3"
description = "Flexible RAG"
authors = ["Jérôme Picault <jerome.picault@rte-france.com>", "Guillaume Grosjean <guillaume.grosjean@rte-france.com>"]
license = "MPL 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
accelerate = "^1.6.0"
bert-score = "^0.3.13"
black = "^24.10.0"
bs4 = "^0.0.2"
chromadb = "0.5.11"
django = "^5.2"
docxtpl = "^0.18.0"
evaluate = "^0.4.3"
fastapi = "^0.115.12"
fschat = "^0.2.36"
langchain = "^0.3.23"
langchain-community = "^0.3.21"
langchain-chroma = "^0.1.4"
langchain-openai = "^0.3.12"
llama-index-core = "^0.11.16"
locust = "^2.34.1"
loguru = "^0.7.3"
mammoth = "^1.9.0"
markdown = "^3.7"
numpy = "<2"
openai = "^1.72.0"
openpyxl = "^3.1.5"
pandas = "^2.2.3"
plotly = "^5.24.1"
PyJWT = "^2.10.1"
pymupdf = "^1.25.5"
pysqlite3-binary = "^0.5.4"
python-docx = "^1.1.2"
python-multipart = "^0.0.12"
python-pptx = "^1.0.2"
pyyaml = "^6.0.2"
rank-bm25 = "^0.2.2"
reportlab = "^4.3.1"
scikit-learn = "^1.6.1"
scipy = "^1.15.2"
seaborn = "^0.13.2"
sentence-transformers = "^3.4.1"
streamlit = "^1.44.1"
tiktoken = "^0.7.0"
tqdm-joblib = "^0.0.4"
typer = "^0.12.5"
torch = "2.4.0"
tree_sitter = "^0.24.0"
tree_sitter_languages = "^1.10.2"
spacy = "<3.8"
sparqlwrapper = "^2.0.0"
unstructured = "^0.15.14"
uvicorn = "^0.31.1"
vllm = "^0.6.3"
whitenoise = "^6.9.0"
xlsx2html = "^0.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"