[metadata]
name = wattelse
version = 1.2.1

# Note: beware of compatibility dependencies between gensim and scipy before upgrading packages versions
[options]
python_requires = >=3.10
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    accelerate==0.33.0
    bert-score==0.3.13
    black==24.4.2
    chromadb==0.5.3
    django==5.0.7
    evaluate==0.4.2
    fastapi==0.111.1
    fschat==0.2.36
    langchain==0.2.15
    langchain_community==0.2.15
    langchain-chroma==0.1.3
    langchain-openai==0.1.23
    jsonlines==4.0.0
    llama-index==0.11.16
    llama-index-core==0.11.16
    locust==2.31.8
    loguru==0.7.2
    markdown==3.5
    mammoth==1.7.1
    md2pdf==1.0.1
    numpy==1.26.4
    openai==1.51.0
    openpyxl==3.1.4
    pandas==2.2.2
    plotly-resampler==0.10.0
    pydantic==2.8.2
    pydeck==0.8.0
    pymupdf==1.24.4
    pysqlite3-binary==0.5.3
    pytest==8.1.1
    python-docx==1.1.2
    python-multipart==0.0.9
    python-pptx==0.6.23
    protobuf==3.20.3
    rank-bm25==0.2.2
    requests==2.32.3
    scikit-learn==1.3.1
    scipy==1.12
    seaborn==0.13.2
    sentence_transformers==3.0.1
    sentencepiece==0.2.0
    spacy==3.7.5
    SPARQLWrapper==2.0.0
    streamlit==1.37.0
    tiktoken==0.7.0
    timeloop==1.0.2
    tinydb==4.8.0
    tinydb-serialization==2.1.1
    tokenizers==0.19.1
    torch==2.4.0
    typer==0.12.3
    unstructured==0.14.5
    uvicorn==0.29.0
    vllm==0.5.5
    xlsx2html==0.6.1
