[metadata]
name = wattelse
version = 1.2.1

# Note: beware of compatibility dependencies between gensim and scipy before upgrading packages versions
[options]
python_requires = >=3.10
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    accelerate==1.0.0
    bert-score==0.3.13
    black==24.8.0
    chromadb==0.5.11
    datasets==3.0.0
    django==5.1.1
    evaluate==0.4.2
    fastapi==0.115.0
    fschat==0.2.36
    langchain==0.3.2
    langchain_community==0.3.1
    langchain-chroma==0.1.4
    langchain-openai==0.2.2
    llama-index-core==0.11.16
    locust==2.31.8
    loguru==0.7.2
    mammoth==1.8.0
    matplotlib==3.9.2
    numpy<2
    onnxruntime==1.19.2
    openai==1.51.0
    openpyxl==3.1.5
    pandas==2.2.3
    pyarrow==17.0.0
    pydantic<3
    pydeck==0.8.0
    pymupdf==1.24.11
    pysqlite3-binary==0.5.3
    pytest==8.3.3
    python-docx==1.1.2
    python-multipart==0.0.12
    python-pptx==1.0.2
    rank-bm25==0.2.2
    requests==2.32.3
    scikit-learn==1.5.2
    scipy==1.14.1
    seaborn==0.13.2
    sentence_transformers==3.1.1
    sentencepiece==0.2.0
    spacy==3.8.2
    SPARQLWrapper==2.0.0
    streamlit==1.39.0
    tiktoken==0.7.0
    timeloop==1.0.2
    tokenizers<0.20.0
    torch==2.4.0
    typer==0.12.5
    unstructured==0.15.13
    uvicorn==0.31.0
    vllm==0.6.2
    xlsx2html==0.6.1
